; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_xml.c_vlclua_xml_reader_next_attr.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_xml.c_vlclua_xml_reader_next_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"xml_reader\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_xml_reader_next_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_xml_reader_next_attr(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @luaL_checkudata(i32* %7, i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %9 = inttoptr i64 %8 to i32**
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** %4, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i8* @xml_ReaderNextAttr(i32* %11, i8** %5)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @lua_pushstring(i32* %17, i8* %18)
  %20 = load i32*, i32** %3, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @lua_pushstring(i32* %20, i8* %21)
  store i32 2, i32* %2, align 4
  br label %23

23:                                               ; preds = %16, %15
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i64 @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i8* @xml_ReaderNextAttr(i32*, i8**) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
